--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -12,11 +12,14 @@
     "vite": "^4.0.4"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.4",
     "@react-three/drei": "^9.50.3",
     "@react-three/fiber": "^8.9.2",
     "@splinetool/react-spline": "^3.1.0",
     "axios": "^1.7.2",
     "bootstrap": "^5.3.3",
+    "cookie-parser": "^1.4.6",
+    "mdb-react-ui-kit": "^8.0.0",
     "r3f-perf": "^6.6.3",
     "react": "18.2",
     "react-awesome-reveal": "^4.2.11",
